--- a/docker_scripts/docker-compose.yaml
+++ b/docker_scripts/docker-compose.yaml
@@ -3,10 +3,14 @@ version: '3'
 services:
   db:
     image: mongo:5.0
-    restart: always
     ports:
       - 27017:27017
     environment:
       - MONGODB_DATABASE=visualizar
     volumes:
       - ./mongo:/data/db
+  redis:
+    image: redis:6.2.6-alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
