--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,10 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v2
         with:
-          cache: 'npm'
-          node-version: '14'
+          cache: 'yarn'
+          node-version: '16.18.0'
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
       - name: Build
         run: npm run build
       - uses: actions/upload-artifact@v2
