--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           fetch-depth: 0
 
       - name: Start containers
-        run: docker-compose -f "./docker_scripts/docker-compose.yaml" up -d
+        run: docker-compose -f "./docker_scripts/docker-compose.yaml" up -d --build
 
       - uses: actions/setup-node@v2
         with:
