--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "bcrypt": "^5.0.1",
     "cache-manager": "^5.1.4",
+    "cache-manager-store-redis": "^0.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "mongoose": "^6.5.1",
