--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -18,10 +18,9 @@ services:
       PORT: ${PORT}
       DEFAULT_LIMIT: ${DEFAULT_LIMIT}
       
-
   db:
     image: mongo:5
-    container_name: visualizarcontainer
+    container_name: visualizar-db
     restart: always
     ports:
       - 27017:27017
